# granite-vision-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py  streamlit_home.py  ui_helpers.py
docs/superpowers/plans/: 2026-03-20-image-segmentation.md  2026-03-20-unified-element-extraction.md  2026-03-21-multipage-qa.md  2026-03-22-document-search.md  2026-03-23-refactoring-improvements.md  2026-03-23-ui-improvements.md  2026-03-25-focus-on-intended-use.md  2026-03-26-enterprise-ui-improvements.md  2026-03-27-simplified-ui.md  2026-03-28-progressive-disclosure-ui.md
docs/superpowers/specs/: 2026-03-20-unified-element-extraction-design.md  2026-03-21-multipage-qa-design.md  2026-03-22-document-search-design.md  2026-03-23-refactoring-improvements-design.md  2026-03-23-ui-improvements-design.md  2026-03-25-focus-on-intended-use-design.md  2026-03-26-enterprise-ui-improvements-design.md  2026-03-27-simplified-ui-design.md  2026-03-28-progressive-disclosure-ui-design.md
pages/: doctags.py  extraction.py  qa.py  search.py  segmentation.py
pipeline/: __init__.py  config.py  doctags.py  models.py  pdf.py  qa.py  search.py  segmentation.py  utils.py
tests/: test_config.py  test_doctags.py  test_models.py  test_pdf.py  test_qa.py  test_search.py  test_segmentation.py  test_ui_helpers.py  test_utils.py
