[project]
name = "granite-vision-pipeline"
version = "0.6.0"
description = "Extract and describe pictures and tables in PDFs, segment objects in images, parse documents to structured text, answer questions across multiple document pages, and search extracted content with RAG"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "docling[vlm]",
    "pypdfium2",
    "sentence-transformers",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
override-dependencies = ["opencv-python-headless>=4.6"]
constraint-dependencies = ["opencv-python<0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"pipeline/config.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
