[project]
name = "granite-vision-pipeline"
version = "0.9.0"
description = "Answer questions across 2-8 consecutive PDF pages using Granite Vision"
requires-python = ">=3.12"
dependencies = [
    "pypdfium2",
    "streamlit>=1.39.0",
    "torch",
    "torchvision>=0.25.0",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
